Fixing program type nav on mobile

--- a/web/app/themes/girlsgarage/assets/styles/pages/_program-type.scss
+++ b/web/app/themes/girlsgarage/assets/styles/pages/_program-type.scss
@@ -70,9 +70,13 @@
       border-bottom: none;
       width: calc(100% + 12px);
       height: #{$vertical-beat * 2};
-      margin-top: #{$vertical-beat * 2};
+      margin: #{$vertical-beat * 3} 0 #{$vertical-beat * 2};
     }
     
+    .-inner {
+      @include clearfix;
+    }
+
     .back-container,
     .season-nav,
     .program-cat-list {
@@ -82,6 +86,7 @@
     }
 
     .back-container {
+      margin-top: 40px;
       .button-prev {
         text-decoration: none;
       }
@@ -156,6 +161,10 @@
       .program-cat-list {
         float: none;
         width: 100%;
+      }
+
+      .back-container {
+        margin-top: 0;
       }
     }
   }
